@@ -1,4 +1,4 @@
-8/22/00:
+8/22/00:	v0.40
 		Note:  ALL save games from before this update are now broken.
 		Games must be restarted.
 
@@ -27,8 +27,6 @@
 		Better shape browser.
 
 		The usual slew of bug-fixes.
-
-		...
 
 
 7/6/00:		V0.35
